logs/dag_id=testing/run_id=manual__2022-06-15T08:46:31.106156+00:00/task_id=create_table/attempt=1.log
[2022-06-15 08:46:34,478] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: testing.create_table manual__2022-06-15T08:46:31.106156+00:00 [queued]>
[2022-06-15 08:46:34,501] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: testing.create_table manual__2022-06-15T08:46:31.106156+00:00 [queued]>
[2022-06-15 08:46:34,504] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 08:46:34,507] {taskinstance.py:1357} INFO - Starting attempt 1 of 2
[2022-06-15 08:46:34,509] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 08:46:34,595] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_table> on 2022-06-15 08:46:31.106156+00:00
[2022-06-15 08:46:34,610] {standard_task_runner.py:52} INFO - Started process 8691 to run task
[2022-06-15 08:46:34,624] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'testing', 'create_table', 'manual__2022-06-15T08:46:31.106156+00:00', '--job-id', '75', '--raw', '--subdir', 'DAGS_FOLDER/create_table.py', '--cfg-path', '/tmp/tmpzgge_31w', '--error-file', '/tmp/tmpshwspnye']
[2022-06-15 08:46:34,631] {standard_task_runner.py:80} INFO - Job 75: Subtask create_table
[2022-06-15 08:46:34,958] {task_command.py:370} INFO - Running <TaskInstance: testing.create_table manual__2022-06-15T08:46:31.106156+00:00 [running]> on host cfddca254c64
[2022-06-15 08:46:35,447] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=testing
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-06-15T08:46:31.106156+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-15T08:46:31.106156+00:00
[2022-06-15 08:46:35,484] {base.py:68} INFO - Using connection ID 'postgre_sql' for task execution.
[2022-06-15 08:46:35,529] {dbapi.py:213} INFO - Running statement: 
        DROP TABLE IF EXISTS z1_user;
        CREATE TABLE z1_user(
            user_id VARCHAR(255) PRIMARY KEY,
            name VARCHAR(255),
            phonenumber VARCHAR(255),
            email VARCHAR(255),
            address VARCHAR(255),
            work VARCHAR(255),
            other VARCHAR(255),
        ) 
        , parameters: None
[2022-06-15 08:46:35,547] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 11:         ) 
                 ^

[2022-06-15 08:46:35,656] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=testing, task_id=create_table, execution_date=20220615T084631, start_date=20220615T084634, end_date=20220615T084635
[2022-06-15 08:46:35,728] {standard_task_runner.py:97} ERROR - Failed to execute job 75 for task create_table (syntax error at or near ")"
LINE 11:         ) 
                 ^
; 8691)
[2022-06-15 08:46:35,978] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-15 08:46:36,140] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
